--- a/charts/lightningd/templates/statefulset.yaml
+++ b/charts/lightningd/templates/statefulset.yaml
@@ -43,13 +43,13 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            cat <<EOF > /root/.lightning/config
-            bitcoin-rpcpassword=$(cat /secrets/bitcoinrpcpassword)
-            wallet=$(cat /secrets/wallet-db)
-            bookkeeper-db=$(cat /secrets/bookkeeper-db)
-            $(cat /configmap/lightning.conf)
-            EOF
+            - |
+              cat <<EOF > /root/.lightning/config
+              bitcoin-rpcpassword=$(cat /secrets/bitcoinrpcpassword)
+              wallet=$(cat /secrets/wallet-db)
+              bookkeeper-db=$(cat /secrets/bookkeeper-db)
+              $(cat /configmap/lightning.conf)
+              EOF
           volumeMounts:
             - name: configmap
               mountPath: /configmap
@@ -62,31 +62,31 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            set -e # Exit if any command fails
-            apk add --no-cache curl tar &&
-            curl -L "https://numeraire.fra1.cdn.digitaloceanspaces.com/lspd/lspd.tar.gz" -o /tmp/lspd.tar.gz &&
-            tar -xzf /tmp/lspd.tar.gz -C /tmp &&
-            mkdir -p /plugins &&
-            mv /tmp/lspd_cln_plugin /plugins/ &&
-            mkdir -p /lspd &&
-            mv /tmp/lspd /lspd/ 
+            - |
+              set -e # Exit if any command fails
+              apk add --no-cache curl tar &&
+              curl -L "https://numeraire.fra1.cdn.digitaloceanspaces.com/lspd/lspd.tar.gz" -o /tmp/lspd.tar.gz &&
+              tar -xzf /tmp/lspd.tar.gz -C /tmp &&
+              mkdir -p /plugins &&
+              mv /tmp/lspd_cln_plugin /plugins/ &&
+              mkdir -p /lspd &&
+              mv /tmp/lspd /lspd/ 
           volumeMounts:
-          - name: plugins
-            mountPath: /plugins
-          - name: lspd
-            mountPath: /lspd
+            - name: plugins
+              mountPath: /plugins
+            - name: lspd
+              mountPath: /lspd
         - name: setup-nodes-env
           image: alpine:latest
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            set -e # Exit if any command fails
-            apk add --no-cache curl &&
-            echo 'Creating NODES env variable' &&
-            EXTERNAL_IP=$(curl -s http://whatismyip.akamai.com/) &&
-            NODES_JSON="[ { \"name\": \"${LSP_NAME}\", \"nodePubkey\": \"${PUB_KEY}\", \"lspdPrivateKey\": \"${LSPD_PRIVATE_KEY}\", \"token\": \"${TOKEN}\", \"host\": \"${EXTERNAL_IP}:8888\", \"publicChannelAmount\": \"1000183\", \"channelAmount\": \"100000\", \"channelPrivate\": false, \"targetConf\": \"6\", \"minConfs\": \"6\", \"minHtlcMsat\": \"600\", \"baseFeeMsat\": \"1000\", \"feeRate\": \"0.000001\", \"timeLockDelta\": \"144\", \"channelFeePermyriad\": \"40\", \"channelMinimumFeeMsat\": \"2000000\", \"additionalChannelCapacity\": \"100000\", \"maxInactiveDuration\": \"3888000\",  \"cln\": { \"pluginAddress\": \"127.0.0.1:12312\", \"socketPath\": \"/root/.lightning/bitcoin/lightning-rpc\" } } ]" &&
-            echo $NODES_JSON > /etc/nodes/nodes.json
+            - |
+              set -e # Exit if any command fails
+              apk add --no-cache curl &&
+              echo 'Creating NODES env variable' &&
+              EXTERNAL_IP=$(curl -s http://whatismyip.akamai.com/) &&
+              NODES_JSON="[ { \"name\": \"${LSP_NAME}\", \"nodePubkey\": \"${PUB_KEY}\", \"lspdPrivateKey\": \"${LSPD_PRIVATE_KEY}\", \"tokens\": [\"${TOKEN}\"], \"host\": \"${EXTERNAL_IP}:8888\", \"targetConf\": \"6\", \"minConfs\": \"0\", \"minHtlcMsat\": \"600\", \"baseFeeMsat\": \"1000\", \"feeRate\": \"0.000001\", \"timeLockDelta\": \"144\", \"channelFeePermyriad\": \"40\", \"channelMinimumFeeMsat\": \"2000000\", \"additionalChannelCapacity\": \"100000\", \"maxInactiveDuration\": \"3888000\",  \"cln\": { \"pluginAddress\": \"127.0.0.1:12312\", \"socketPath\": \"/root/.lightning/bitcoin/lightning-rpc\" } } ]" &&
+              echo $NODES_JSON > /etc/nodes/nodes.json
           env:
             - name: LSP_NAME
               value: {{.Values.lspdGenericConfig.lspName}}
@@ -103,8 +103,23 @@ spec:
                   name: lspd-conf
                   key: token
           volumeMounts:
-          - name: nodes
-            mountPath: /etc/nodes
+            - name: nodes
+              mountPath: /etc/nodes
+        - name: lspd-migrations
+          image: migrate/migrate:v4.17.0
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              migrate -path /migrations -database $DATABASE_URL up
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lspd-conf
+                  key: database-url
+          volumeMounts:
+            - name: migrations-volume
+              mountPath: /migrations
       containers:
       {{- if .Values.sidecarContainers }}
       {{- toYaml .Values.sidecarContainers | nindent 8 }}
@@ -118,8 +133,6 @@ spec:
           env:
             - name: MALLOC_ARENA_MAX
               value: "1"
-            - name: LIGHTNINGD_NETWORK
-              value: {{.Values.global.network}}
             - name: LISTEN_ADDRESS
               value: {{.Values.lspdGenericConfig.listenAddress}}
             - name: DATABASE_URL
@@ -214,6 +227,11 @@ spec:
           emptyDir: {}
         - name: nodes
           emptyDir: {}
+        - name: migrations-volume
+          gitRepo:
+            repository: https://github.com/breez/lspd.git
+            directory: ./postgresql/migrations
+            revision: "v24.03.16"
         - name: start-script-volume
           configMap:
             name: start-script
