--- a/charts/lightningd/templates/dynamic-fees.yaml
+++ b/charts/lightningd/templates/dynamic-fees.yaml
@@ -5,7 +5,7 @@ metadata:
   labels: 
     {{- include "lightningd.labels" . | nindent 4 }}
 spec:
-  schedule: {{.Values.dynamicFeesGenericConfig.schedule}}
+  schedule: "{{ .Values.dynamicFeesGenericConfig.schedule }}"
   jobTemplate:
     spec:
       template:
@@ -15,15 +15,15 @@ spec:
             image:  {{.Values.dynamicFeesGenericConfig.image}}
             imagePullPolicy: IfNotPresent
             env:
-                - name: VERBOSE
-                value: {{.Values.dynamicFeesGenericConfig.verbose}}
-                - name: MEMPOOL_API_BASE_URL
-                value: {{.Values.dynamicFeesGenericConfig.verbose}}
-                - name: WHATTHEFEE_API_BASE_URL
-                value: {{.Values.dynamicFeesGenericConfig.verbose}}
-                - name: DATABASE_URL
+              - name: VERBOSE
+                value: "{{ .Values.dynamicFeesGenericConfig.verbose }}"
+              - name: MEMPOOL_API_BASE_URL
+                value: "{{ .Values.dynamicFeesGenericConfig.mempoolApiBaseUrl }}"
+              - name: WHATTHEFEE_API_BASE_URL
+                value: "{{ .Values.dynamicFeesGenericConfig.whattheFeeApiBaseUrl }}"
+              - name: DATABASE_URL
                 valueFrom:
-                    secretKeyRef:
-                    name: lspd-conf
-                    key: database-url 
+                  secretKeyRef:
+                  name: lspd-conf
+                  key: database-url 
           restartPolicy: OnFailure  # Ensures that failed jobs are retried
