--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -136,6 +136,13 @@ lspdGenericConfig:
   pubKey: 02fc22cb2dd9c71b39ad246ae206259376e0127cce2192d4061abd0172b53f391b
   externalIp: 46.101.68.120
 
+dynamicFeesGenericConfig:
+  verbose: "False"
+  schedule: "*/2 * * * *"
+  image: registry.digitalocean.com/swissknife/dynamicfees:v0.0.2
+  mempoolApiBaseUrl: https://mempool.space/api/v1/
+  whattheFeeApiBaseUrl: https://whatthefee.io/
+
 startupProbe:
   failureThreshold: 5
 
