--- a/charts/rtl/templates/configmap.yaml
+++ b/charts/rtl/templates/configmap.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: { { include "rtl.fullname" . } }-config
-  labels: { { - include "rtl.labels" . | nindent 4 } }
+  name: {{ include "rtl.fullname" . }}-config
+  labels: 
+  {{- include "rtl.labels" . | nindent 4 }}
 data:
   RTL-Config.json: |
     {
