--- a/charts/rtl/values.yaml
+++ b/charts/rtl/values.yaml
@@ -46,21 +46,20 @@ service:
   port: 3000
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "nginx"
   annotations:
-    {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
-    - host: chart-example.local
+    - host: rtl.swissknife.numeraire.tech
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+    - secretName: rtl-tls
+      hosts:
+        - rtl.swissknife.numeraire.tech
 
 resources:
   {}
