--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -55,6 +55,9 @@ restService:
   port: 3010
   targetPort: 3010
 
+grpcService:
+  port: 12313
+
 resources:
   {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -120,7 +123,7 @@ lightningdGenericConfig:
   - dev-allowdustreserve=true
   - plugin=/root/.lightning/plugins/lspd_cln_plugin
   - lsp-listen=127.0.0.1:12312
-  - allow-deprecated-apis=true
+  - grpc-port=12313
   - experimental-anchors
   - disable-dns
   - database-upgrade=true
