--- a/charts/lightningd/templates/start-configmap.yaml
+++ b/charts/lightningd/templates/start-configmap.yaml
@@ -9,8 +9,7 @@ data:
     # Read nodes.json content and export it as an environment variable
     export NODES=$(cat /etc/nodes/nodes.json)
 
-    # Start lightningd in the background with the --daemon flag
-    lightningd --daemon --log-file /root/.lightning/bitcoin/lightningd.log
+    sleep 30
 
     # Start lspd
     chmod +x /root/.lightning/lspd/lspd
