feat: First release LSP (#24)

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -45,13 +45,15 @@ jobs:
       - name: Deploy Mainnet
         if: github.ref == 'refs/heads/main'
         run: |
-          helm upgrade kube-prometheus-stack prometheus-community/kube-prometheus-stack --version 55.7.0 --namespace kube-prometheus-stack --values charts/monitoring/values.yaml
-          helm upgrade --install cert-manager charts/networking/ -f charts/networking/values.yaml --namespace cert-manager --set ingress-nginx.enabled=false
-          helm upgrade --install ingress-nginx charts/networking/ -f charts/networking/values.yaml --namespace ingress-nginx --set cert-manager.enabled=false,installClusterIssuer=false
-          helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/values.yaml --namespace bitcoin-mainnet --create-namespace
-          helm upgrade --install lightningd charts/lightningd/ -f charts/lightningd/values.yaml --namespace lightning-mainnet --create-namespace
+          helm upgrade kube-prometheus-stack prometheus-community/kube-prometheus-stack --version 55.7.0 -n kube-prometheus-stack --values charts/monitoring/values.yaml
+          helm upgrade --install cert-manager charts/networking/ -f charts/networking/values.yaml -n cert-manager --set ingress-nginx.enabled=false
+          helm upgrade --install ingress-nginx charts/networking/ -f charts/networking/values.yaml -n ingress-nginx --set cert-manager.enabled=false,installClusterIssuer=false
+          helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/values.yaml -n bitcoin-mainnet --create-namespace
+          helm upgrade --install lightningd charts/lightningd/ -f charts/lightningd/values.yaml -n lightning-mainnet --create-namespace
+          helm upgrade --install rtl charts/rtl/ -f charts/rtl/values.yaml -n lightning-mainnet
+          helm upgrade --install pgadmin4 charts/database/ -f charts/database/values.yaml -n pgadmin --create-namespace
       - name: Deploy Testnet
         if: github.ref == 'refs/heads/development'
         run: |
-          helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/testnet-values.yaml --namespace bitcoin-testnet --create-namespace
+          helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/testnet-values.yaml -n bitcoin-testnet --create-namespace
           # Add more Helm upgrade/install commands as needed for other charts
