--- a/charts/lightningd/templates/statefulset.yaml
+++ b/charts/lightningd/templates/statefulset.yaml
@@ -43,13 +43,14 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            cat <<EOF > /root/.lightning/config
-            bitcoin-rpcpassword=$(cat /secrets/bitcoinrpcpassword)
-            wallet=$(cat /secrets/wallet-db)
-            bookkeeper-db=$(cat /secrets/bookkeeper-db)
-            $(cat /configmap/lightning.conf)
-            EOF
+            - |
+              cat <<EOF > /root/.lightning/config
+              bitcoin-rpcpassword=$(cat /secrets/bitcoinrpcpassword)
+              wallet=$(cat /secrets/wallet-db)
+              bookkeeper-db=$(cat /secrets/bookkeeper-db)
+              $(cat /configmap/lightning.conf)
+              lsp-channel-accept-script=(lambda oc: encode({"result":"continue"}) if oc["id"]=="031015a7839468a3c266d662d5bb21ea4cea24226936e2864a7ca4f2c3939836e0" or oc["id"]=="02442d4249f9a93464aaf8cd8d522faa869356707b5f1537a8d6def2af50058c5b" else encode({"result":"reject", "error_message": "The channel cannot be opened"}))(decode(openchannel))
+              EOF
           volumeMounts:
             - name: configmap
               mountPath: /configmap
@@ -62,36 +63,34 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            set -e # Exit if any command fails
-            apk add --no-cache curl tar &&
-            curl -L "https://numeraire.fra1.cdn.digitaloceanspaces.com/lspd/lspd.tar.gz" -o /tmp/lspd.tar.gz &&
-            tar -xzf /tmp/lspd.tar.gz -C /tmp &&
-            mkdir -p /plugins &&
-            mv /tmp/lspd_cln_plugin /plugins/ &&
-            mkdir -p /lspd &&
-            mv /tmp/lspd /lspd/ 
+            - |
+              set -e # Exit if any command fails
+              apk add --no-cache curl tar &&
+              curl -L "https://github.com/bitcoin-numeraire/lspd/releases/download/v24.06/lspd-v24.05-linux-amd64.tar.gz" -o /tmp/lspd.tar.gz &&
+              tar -xzf /tmp/lspd.tar.gz -C /tmp &&
+              mkdir -p /plugins &&
+              mv /tmp/lspd_cln_plugin /plugins/ &&
+              mkdir -p /lspd &&
+              mv /tmp/lspd /lspd/ 
           volumeMounts:
-          - name: plugins
-            mountPath: /plugins
-          - name: lspd
-            mountPath: /lspd
+            - name: plugins
+              mountPath: /plugins
+            - name: lspd
+              mountPath: /lspd
         - name: setup-nodes-env
           image: alpine:latest
           command: ["/bin/sh", "-c"]
           args:
-          - |
-            set -e # Exit if any command fails
-            apk add --no-cache curl &&
-            echo 'Creating NODES env variable' &&
-            EXTERNAL_IP=$(curl -s http://whatismyip.akamai.com/) &&
-            NODES_JSON="[ { \"name\": \"${LSP_NAME}\", \"nodePubkey\": \"${PUB_KEY}\", \"lspdPrivateKey\": \"${LSPD_PRIVATE_KEY}\", \"token\": \"${TOKEN}\", \"host\": \"${EXTERNAL_IP}:8888\", \"publicChannelAmount\": \"1000183\", \"channelAmount\": \"100000\", \"channelPrivate\": false, \"targetConf\": \"6\", \"minConfs\": \"6\", \"minHtlcMsat\": \"600\", \"baseFeeMsat\": \"1000\", \"feeRate\": \"0.000001\", \"timeLockDelta\": \"144\", \"channelFeePermyriad\": \"40\", \"channelMinimumFeeMsat\": \"2000000\", \"additionalChannelCapacity\": \"100000\", \"maxInactiveDuration\": \"3888000\",  \"cln\": { \"pluginAddress\": \"127.0.0.1:12312\", \"socketPath\": \"/root/.lightning/bitcoin/lightning-rpc\" } } ]" &&
-            echo $NODES_JSON > /etc/nodes/nodes.json
+            - |
+              NODES_JSON="[ { \"name\": \"${LSP_NAME}\", \"nodePubkey\": \"${PUB_KEY}\", \"lspdPrivateKey\": \"${LSPD_PRIVATE_KEY}\", \"tokens\": [\"${TOKEN}\"], \"host\": \"${EXTERNAL_IP}:9735\", \"targetConf\": \"6\", \"minConfs\": \"0\", \"minHtlcMsat\": \"600\", \"baseFeeMsat\": \"1000\", \"feeRate\": \"0.000001\", \"timeLockDelta\": \"144\", \"channelFeePermyriad\": \"40\", \"channelMinimumFeeMsat\": \"2000000\", \"additionalChannelCapacity\": \"100000\", \"maxInactiveDuration\": \"3888000\",  \"cln\": { \"pluginAddress\": \"127.0.0.1:12312\", \"grpcAddress\": \"127.0.0.1:12313\", \"caCert\": \"/root/.lightning/bitcoin/ca.pem\", \"clientCert\": \"/root/.lightning/bitcoin/client.pem\", \"clientKey\": \"/root/.lightning/bitcoin/client-key.pem\" } } ]" &&
+              echo $NODES_JSON > /etc/nodes/nodes.json
           env:
             - name: LSP_NAME
               value: {{.Values.lspdGenericConfig.lspName}}
             - name: PUB_KEY
               value: {{.Values.lspdGenericConfig.pubKey}}
+            - name: EXTERNAL_IP
+              value: {{.Values.lspdGenericConfig.externalIp}}
             - name: LSPD_PRIVATE_KEY
               valueFrom:
                 secretKeyRef:
@@ -103,23 +102,88 @@ spec:
                   name: lspd-conf
                   key: token
           volumeMounts:
-          - name: nodes
-            mountPath: /etc/nodes
+            - name: nodes
+              mountPath: /etc/nodes
+        - name: lspd-migrations
+          image: migrate/migrate:v4.17.0
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              apk add --no-cache git &&
+              git clone https://github.com/bitcoin-numeraire/lspd.git /migrations &&
+              cd /migrations &&
+              git checkout v24.06 &&
+              migrate -path /migrations/postgresql/migrations -database $DATABASE_URL up
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lspd-conf
+                  key: database-url
+          volumeMounts:
+            - name: migrations-volume
+              mountPath: /migrations
       containers:
-      {{- if .Values.sidecarContainers }}
-      {{- toYaml .Values.sidecarContainers | nindent 8 }}
-      {{- end }}
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: MALLOC_ARENA_MAX
+              value: "1"
+          ports:
+            - name: p2p
+              containerPort: {{ .Values.p2pService.port }}
+            - name: rest
+              containerPort: {{ .Values.restService.port }}
+            - name: grpc
+              containerPort: {{ .Values.grpcService.port }}
+          volumeMounts:
+            - name: data
+              mountPath: /root/.lightning
+            - name: config
+              mountPath: /root/.lightning/config
+              subPath: config
+            - name: plugins
+              mountPath: /root/.lightning/plugins
+          startupProbe:
+            exec:
+              command:
+              - lightning-cli
+              - getinfo
+            failureThreshold: {{.Values.startupProbe.failureThreshold}}
+            periodSeconds: 10
+            timeoutSeconds: 3
+          livenessProbe:
+            exec:
+              command:
+              - lightning-cli
+              - getinfo
+            initialDelaySeconds: 120
+            periodSeconds: 30
+            timeoutSeconds: 3
+            failureThreshold: {{.Values.livenessProbe.failureThreshold}}
+          readinessProbe:
+            exec:
+              command:
+              - lightning-cli
+              - getinfo
+            periodSeconds: 30
+            successThreshold: 1
+            timeoutSeconds: 3
+            failureThreshold: {{.Values.livenessProbe.failureThreshold}}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+        - name: lspd
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "golang:1.22.3-bullseye"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh", "/scripts/start.sh"]
           env:
             - name: MALLOC_ARENA_MAX
               value: "1"
-            - name: LIGHTNINGD_NETWORK
-              value: {{.Values.global.network}}
             - name: LISTEN_ADDRESS
               value: {{.Values.lspdGenericConfig.listenAddress}}
             - name: DATABASE_URL
@@ -153,53 +217,25 @@ spec:
             - name: MEMPOOL_PRIORITY
               value: {{.Values.lspdGenericConfig.mempoolPriority}}
           ports:
-            - name: p2p
-              containerPort: {{ .Values.p2pService.port }}
             - name: lspd
               containerPort: {{ .Values.lspdService.port }}
           volumeMounts:
             - name: data
               mountPath: /root/.lightning
-            - name: config
-              mountPath: /root/.lightning/config
-              subPath: config
-            - name: plugins
-              mountPath: /root/.lightning/plugins
+              readOnly: true
             - name: nodes
               mountPath: /etc/nodes
+              readOnly: true
             - name: lspd
               mountPath: /root/.lightning/lspd
             - name: start-script-volume
               mountPath: /scripts
-          startupProbe:
-            exec:
-              command:
-              - lightning-cli
-              - getinfo
-            failureThreshold: {{.Values.startupProbe.failureThreshold}}
-            periodSeconds: 10
-            timeoutSeconds: 3
-          livenessProbe:
-            exec:
-              command:
-              - lightning-cli
-              - getinfo
-            initialDelaySeconds: 120
-            periodSeconds: 30
-            timeoutSeconds: 3
-            failureThreshold: {{.Values.livenessProbe.failureThreshold}}
-          readinessProbe:
-            exec:
-              command:
-              - lightning-cli
-              - getinfo
-            periodSeconds: 30
-            successThreshold: 1
-            timeoutSeconds: 3
-            failureThreshold: {{.Values.livenessProbe.failureThreshold}}
+              readOnly: true
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
+        - name: certs
+          emptyDir: {}
         - name: config
           emptyDir: {}
         - name: secrets
@@ -213,6 +249,8 @@ spec:
         - name: lspd
           emptyDir: {}
         - name: nodes
+          emptyDir: {}
+        - name: migrations-volume
           emptyDir: {}
         - name: start-script-volume
           configMap:
