--- a/charts/lightningd/templates/ingress.yaml
+++ b/charts/lightningd/templates/ingress.yaml
@@ -4,9 +4,11 @@ kind: Ingress
 metadata:
   name: {{ include "lightningd.fullname" . }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"  # Ensures the backend protocol is set to gRPC
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"      # Redirects HTTP to HTTPS, crucial for secure gRPC
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - {{.Values.lspdService.host}}
