--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -52,6 +52,7 @@ jobs:
           helm upgrade --install lightningd charts/lightningd/ -f charts/lightningd/values.yaml -n lightning-mainnet --create-namespace
           helm upgrade --install rtl charts/rtl/ -f charts/rtl/values.yaml -n lightning-mainnet
           helm upgrade --install pgadmin4 charts/database/ -f charts/database/values.yaml -n pgadmin --create-namespace
+          helm upgrade --install swissknife charts/swissknife/ -f charts/swissknife/values.yaml -n swissknife --create-namespace
       - name: Deploy Testnet
         if: github.ref == 'refs/heads/development'
         run: |
