--- a/charts/swissknife/values.yaml
+++ b/charts/swissknife/values.yaml
@@ -5,10 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: shahanafarooqui/rtl
+  repository: registry.digitalocean.com/swissknife/swissknife
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.15.2"
+  tag: "v0.1.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -52,14 +51,14 @@ ingress:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
-    - host: rtl.swissknife.numeraire.tech
+    - host: api.numeraire.tech
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    - secretName: rtl-tls
+    - secretName: swissknife-tls
       hosts:
-        - rtl.swissknife.numeraire.tech
+        - api.numeraire.tech
 
 resources:
   {}
@@ -74,42 +73,31 @@ resources:
   #   cpu: 100m
   #   memory: 128Mi
 
-persistence:
-  enabled: true
-  storageClass: "do-block-storage-retain"
-  size: "5Gi"
-  accessMode: "ReadWriteOnce"
-
 livenessProbe:
   httpGet:
-    path: /
+    path: /v1/system/health
     port: http
 readinessProbe:
   httpGet:
-    path: /
+    path: /v1/system/ready
     port: http
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 volumes:
   - name: config-volume
     configMap:
-      name: rtl-config
-  - name: multipass-config
-    emptyDir: {}
-  - name: rune-volume
-    emptyDir: {}
-  - name: rtl-data
-    persistentVolumeClaim:
-      claimName: "rtl"
+      name: swissknife-config
 
 volumeMounts:
-  - name: multipass-config
-    mountPath: "/etc/multipass-config"
-  - name: rune-volume
-    mountPath: "/etc/rune"
-    readOnly: true
-  - name: rtl-data
-    mountPath: "/var/lib/rtl"
-    readOnly: false
+  - name: config-volume
+    configMap:
+      name: swissknife-config
 
 nodeSelector: {}
 
@@ -117,9 +105,19 @@ tolerations: []
 
 affinity: {}
 
-rtlConfig:
-  dbDirectoryPath: "/var/lib/rtl"
-  runePath: "/etc/rune/rune"
-  lnServerUrl: "https://lightningd.lightning-mainnet.svc.cluster.local:3010"
-  loglevel: "INFO"
-  configPath: "/etc/multipass-config"
+swissknifeConfig:
+  - |
+    invoice_expiry = "24h"
+    ln_provider = "clnrest"
+    auth_provider = "oauth2"
+    host = "https://api.numeraire.tech"
+
+    [cln_rest_config]
+    endpoint = "https://lightningd.lightning-mainnet.svc.cluster.local:3010"
+
+    [logging]
+    level = "debug"
+    filter = "swissknife=debug"
+
+    [oauth2]
+    domain = "dev-z3xohtidpayxvzid.us.auth0.com"
