--- a/charts/rtl/values.yaml
+++ b/charts/rtl/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: shahanafarooqui/rtl
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.15.2"
+  tag: "v0.15.2"
 
 imagePullSecrets: []
 nameOverride: ""
