--- a/charts/swissknife/values.yaml
+++ b/charts/swissknife/values.yaml
@@ -15,7 +15,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
@@ -96,7 +96,8 @@ volumes:
 
 volumeMounts:
   - name: config-volume
-    mountPath: /config
+    mountPath: /config/production.yml
+    subPath: production.yml
 
 nodeSelector: {}
 
@@ -105,18 +106,12 @@ tolerations: []
 affinity: {}
 
 swissknifeConfig:
-  - |
-    invoice_expiry = "24h"
-    ln_provider = "clnrest"
-    auth_provider = "oauth2"
-    host = "https://api.numeraire.tech"
-
-    [cln_rest_config]
-    endpoint = "https://lightningd.lightning-mainnet.svc.cluster.local:3010"
-
-    [logging]
-    level = "debug"
-    filter = "swissknife=debug"
-
-    [oauth2]
-    domain = "dev-z3xohtidpayxvzid.us.auth0.com"
+  invoice_expiry: 24h
+  ln_provider: clnrest
+  auth_provider: oauth2
+  host: https://api.numeraire.tech
+  cln_rest_config:
+    endpoint: https://lightningd.lightning-mainnet.svc.cluster.local:3010
+    accept_invalid_certs: true
+  oauth2:
+    domain: dev-z3xohtidpayxvzid.us.auth0.com
