--- a/charts/dashboard/values.yaml
+++ b/charts/dashboard/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: registry.digitalocean.com/swissknife/swissknife
+  repository: registry.digitalocean.com/swissknife/dashboard
   pullPolicy: IfNotPresent
   tag: "v0.1.0"
 
@@ -42,7 +42,7 @@ securityContext:
 
 service:
   type: ClusterIP
-  port: 3000
+  port: 8080
 
 ingress:
   enabled: true
@@ -51,14 +51,14 @@ ingress:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
-    - host: api.numeraire.tech
+    - host: dashboard.numeraire.tech
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    - secretName: swissknife-tls
+    - secretName: swissknife-dashboard-tls
       hosts:
-        - api.numeraire.tech
+        - dashboard.numeraire.tech
 
 resources:
   {}
@@ -75,11 +75,11 @@ resources:
 
 livenessProbe:
   httpGet:
-    path: /v1/system/health
+    path: /
     port: http
 readinessProbe:
   httpGet:
-    path: /v1/system/ready
+    path: /
     port: http
 
 autoscaling:
@@ -89,29 +89,12 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes:
-  - name: config-volume
-    configMap:
-      name: swissknife-config
+volumes: []
 
-volumeMounts:
-  - name: config-volume
-    mountPath: /config/production.yml
-    subPath: production.yml
+volumeMounts: []
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
-
-swissknifeConfig:
-  invoice_expiry: 24h
-  ln_provider: clnrest
-  auth_provider: oauth2
-  host: https://api.numeraire.tech
-  cln_rest_config:
-    endpoint: https://lightningd.lightning-mainnet.svc.cluster.local:3010
-    accept_invalid_certs: true
-  oauth2:
-    domain: dev-z3xohtidpayxvzid.us.auth0.com
