--- a/charts/swissknife/values.yaml
+++ b/charts/swissknife/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: registry.digitalocean.com/swissknife/swissknife
   pullPolicy: IfNotPresent
-  tag: "v0.1.0"
+  tag: "v0.1.1"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -119,6 +119,6 @@ swissknifeConfig:
   cln_rest_config:
     endpoint: https://lightningd.lightning-mainnet.svc.cluster.local:3010
     ca_cert_path: /certs/ca.pem
-    accept_invalid_certs: true
+    accept_invalid_hostnames: true
   oauth2:
     domain: dev-z3xohtidpayxvzid.us.auth0.com
