--- a/charts/dashboard/values.yaml
+++ b/charts/dashboard/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: registry.digitalocean.com/swissknife/dashboard
   pullPolicy: IfNotPresent
-  tag: "v0.1.0"
+  tag: "v0.1.1"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -51,14 +51,14 @@ ingress:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   hosts:
-    - host: dashboard.numeraire.tech
+    - host: app.numeraire.tech
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls:
     - secretName: swissknife-dashboard-tls
       hosts:
-        - dashboard.numeraire.tech
+        - app.numeraire.tech
 
 resources:
   {}
